tests/failing/outputs/list_remove_compile.exp
generated/Main.java:12: error: cannot find symbol
    public static T getb()
                  ^
  symbol:   class T
  location: class Main
generated/Main.java:14: error: cannot find symbol
        T b;
        ^
  symbol:   class T
  location: class Main
2 errors
